--- a/rtpengine.service
+++ b/rtpengine.service
@@ -1,13 +1,16 @@
 [Unit]
 Description= RTPEngine proxy for RTP and other media streams
 After=network.target iptables.service redis.service syslog.target
-# iptables.service is required only if the RTPEngine uses its kernel module. redis.service is required if the Redis server is working on the same machine along with the RTPEngine
 
 [Service]
-Type=simple
+Type=forking
+EnvironmentFile=/etc/default/rtpengine
+EnvironmentFile=-/etc/rtpengine.conf
 PIDFile=/var/run/rtpengine/rtpengine.pid
-ExecStart=/usr/bin/rtpengine/rtpengine-start /etc/default/rtpengine-conf
-# After systemd send kill signal to the daemon, clean the iptables stuffs (delete the forwarding table, remove the kernel module + delete iptables rules) 
-ExecStopPost=/usr/bin/rtpengine/rtpengine-stop-post
+ExecStartPre=/usr/bin/rtpengine-start-pre
+PermissionsStartOnly=true
+ExecStart=/usr/bin/rtpengine-start
+ExecStopPost=/usr/bin/rtpengine-stop-post
+
 [Install]
 WantedBy=multi-user.target
